--- a/SearchPictureDemo/ResultView/ResultCollectionViewCell.xib
+++ b/SearchPictureDemo/ResultView/ResultCollectionViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -34,20 +35,33 @@
                             <constraint firstItem="76o-J1-6a8" firstAttribute="height" secondItem="YKD-Km-X5i" secondAttribute="height" multiplier="0.333333" id="mwS-hO-etO"/>
                         </constraints>
                     </stackView>
+                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="suit.heart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bKu-z9-dxv">
+                        <rect key="frame" x="76" y="6.5" width="20" height="17.5"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="20" id="bwi-6j-UFH"/>
+                            <constraint firstAttribute="height" constant="20" id="h50-2Z-4BM"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="bKu-z9-dxv" firstAttribute="top" secondItem="mEK-Qp-rdg" secondAttribute="top" constant="5" id="B54-zS-VAb"/>
                     <constraint firstAttribute="trailing" secondItem="n4F-wr-d78" secondAttribute="trailing" id="Qhz-9n-7lG"/>
                     <constraint firstAttribute="bottom" secondItem="n4F-wr-d78" secondAttribute="bottom" id="R6h-GI-0Ct"/>
                     <constraint firstItem="n4F-wr-d78" firstAttribute="top" secondItem="mEK-Qp-rdg" secondAttribute="top" id="dfe-Qc-pph"/>
+                    <constraint firstAttribute="trailing" secondItem="bKu-z9-dxv" secondAttribute="trailing" constant="5" id="v3k-Yg-0yn"/>
                     <constraint firstItem="n4F-wr-d78" firstAttribute="leading" secondItem="mEK-Qp-rdg" secondAttribute="leading" id="y1T-ob-XjR"/>
                 </constraints>
             </collectionViewCellContentView>
             <size key="customSize" width="534" height="364"/>
             <connections>
+                <outlet property="favoritedButtonView" destination="bKu-z9-dxv" id="kcF-yM-zyF"/>
                 <outlet property="label" destination="76o-J1-6a8" id="vLa-7k-aTu"/>
                 <outlet property="picture" destination="YKD-Km-X5i" id="uCP-9b-XPZ"/>
             </connections>
             <point key="canvasLocation" x="210.86956521739131" y="143.30357142857142"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="suit.heart" catalog="system" width="128" height="109"/>
+    </resources>
 </document>
